Add image that follows mouse when fruit is selected. Enable dragging fruit into squares

--- a/fallguys/index.html
+++ b/fallguys/index.html
@@ -21,6 +21,7 @@
             <div class="watermelon"></div>
         </div>
     </div>
+    <div id="fruitOnMouse" class="followsMouse"></div>
     <h3>Click to Fill Tile</h3>
     <h3>Click Filled Tile to Clear</h3>
     <div id="squares">
