--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
             </div>
             <div class="present">
                 <p>
-                    Hello! My name is Bruno Sousa, I'm 21 years old and I’m currently taking my 5th and final year of
+                    Hello! My name is Bruno Sousa. I'm 21 years old, and I'm currently taking my 5th and final year of
                     Masters Degree in Informatics and Computing Engineering at FEUP.
                 </p>
                 <p>
-                    Currently I am working on my Masters' thesis on "Machine Learning for Creating Robotic Soccer
+                    Currently, I am working on my Masters' thesis on "Machine Learning for Creating Robotic Soccer
                     Setplays".
                 </p>
                 <p>
-                    Altough I'm interested in mostly everything related to Computer Science, my main interests are
-                    in Algorithms & Optimization, Machine Learning, Artificial Intelligence, Data Science,
-                    High-Performance Computing, Software Development and Education.
+                    Although I'm interested in almost everything related to Computer Science, my main interests are in
+                    Algorithms & Optimization, Machine Learning, Artificial Intelligence, Data Science, High-Performance
+                    Computing, Software Development and Education.
                 </p>
                 <p>
                     Feel free to reach out to me using the contacts below:
